tests/unit/default/syntax-error/154-alter-table-to.e.t
---- IN ----
*%table=>
---- OUT ----
---- ERR ----
syntax: expected <table> after `*%table=>` instead of EOL at position 9 - at line 1
---- EXIT ----
1
